# odlcuda

./: .CMakeLists.txt.swp  .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt~  MANIFEST.in  README.md  _clang-format  pytest.ini
.cache/v/pep8/: mtimes
ODLpp/: .CudaVectorImpl.cu.swp  .cuda.cpp.swp  CMakeLists.txt  CudaVector.h  CudaVectorImpl.cu  CudaVectorImpl.h  DeviceVectorImpl.h  SliceHelper.h  TypeMacro.h  UFunc.cu  UFunc.h  __init__.py  cuda.cpp  cuda.cu  setup.py  utils.cpp
ODLpp/odlutils/: CMakeLists.txt  EigenUtils.h  Ellipse.h  Phantom.cpp  Phantom.h  StandardPhantoms.cpp  StandardPhantoms.h  utilities_export.h
ODLpp/utils/: Phantom.cpp  Phantom.h  StandardPhantoms.cpp  StandardPhantoms.h
RLcpp/: CMakeLists.txt  DeviceVector.h  Phantom.cpp  Phantom.h  StandardPhantoms.cpp  cuda.cpp  cuda.cpp~  cuda.cu  cuda.cu~  function_traits-old.h  numpy_eigen-old.h  numpy_eigen.h  numpy_eigen.h~  numpy_utils.h  numpy_utils.h~  setup.py  thrustUtils.h  thrustUtils.h~  utils.cpp  utils.cpp~  wrap.h
RLcpp/operators/: Phantom.h  StandardPhantoms.cpp  StandardPhantoms.h  utilities_export.h
RLcpp/rlutils/: CMakeLists.txt  EigenUtils.h  Phantom.cpp  Phantom.h  StandardPhantoms.cpp  StandardPhantoms.h  utilities_export.h
RLcpp/utils/: CMakeLists.txt  Ellipse.h  Phantom.cpp  Phantom.h  StandardPhantoms.cpp  StandardPhantoms.h
cmake/: FindNumpy.cmake
conda/: build.sh  meta.yaml
odlcuda/: CMakeLists.txt  __init__.py  cu_ntuples.py  odl_plugin.py  setup.py  ufuncs.py  util.py
odlcuda/cuda/: CMakeLists.txt  CudaVector.h  CudaVectorImpl.cu  CudaVectorImpl.h  DeviceVectorImpl.h  Reduction.cu  Reduction.h  SliceHelper.h  UFunc.cu  UFunc.h  cuda.cpp  cuda.cu  dummy.cpp
odlpp/: .CMakeLists.txt.swp  CMakeLists.txt  __init__.py  cu_ntuples.py  odl_pluggin.py  setup.py
odlpp/cuda/: CMakeLists.txt  CudaVector.h  CudaVectorImpl.cu  CudaVectorImpl.h  DeviceVector.h  DeviceVectorImpl.h  Reduction.cu  Reduction.h  SliceHelper.h  TypeMacro.h  UFunc.cu  UFunc.h  cuda.cpp  cuda.cu  cuda.h
python/: README.md  hello.py
test/: cu_ntuples_test.py  cuda_test.py
